[package]
name = "raydium_swap_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
bincode = "1.3"

# Match the Solana crates to your local solana installation; here we use 1.18.26
solana-client = "1.18.26"
solana-sdk = "1.18.26"

anyhow = "1.0"
dotenv = "0.15"    
